whitespaces and linebreaks fixed on song cards

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,3 +101,11 @@ body {
   margin-right: 33rem;
   color: white;
 }
+
+.mb-3 {
+  white-space: pre-wrap;
+}
+
+.songwords {
+  white-space: pre-wrap;
+}
